@@ -27,7 +27,7 @@ http://codespeak.net/tox
 
 
 def main():
-    install_requires=['virtualenv5==1.3.4.1']
+    install_requires=['virtualenv5>=1.3.4.2']
     if sys.version_info[0] < 3:
         install_requires+=['virtualenv>=1.4.9']
     setup(
@@ -35,7 +35,7 @@ def main():
         description='virtualenv-based automation of test activities',
         long_description=long_description,
         url='http://codespeak.net/tox',
-        version='0.7a1',
+        version='0.7a2',
         license='GPLv2 or later',
         platforms=['unix', 'linux', 'osx', 'cygwin', 'win32'],
         author='holger krekel',
