@@ -1,6 +1,9 @@
 0.7
 -----------------
 
+- use virtualenv5 (my own fork of virtualenv3) for now to create python3 
+  environments, fixes a couple of issues and makes tox more seemlessly work
+
 - addressing issue4: always prepend venv-path to PATH variable when calling subprocesses
 
 - fix issue2: exit with proper non-zero return code if there were 
